Bug 88053 - ASSERT(m_fontSelector->document()) is bogus and should be removed
Summary: ASSERT(m_fontSelector->document()) is bogus and should be removed
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 66687
  Show dependency treegraph
 
Reported: 2012-06-01 00:32 PDT by Adam Barth
Modified: 2012-06-01 03:39 PDT (History)
6 users (show)

See Also:


Attachments
Patch (1.64 KB, patch)
2012-06-01 00:35 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2012-06-01 00:32:17 PDT
ASSERT(m_fontSelector->document()) is bogus and should be removed
Comment 1 Adam Barth 2012-06-01 00:35:24 PDT
Created attachment 145227 [details]
Patch
Comment 2 Abhishek Arya 2012-06-01 01:24:57 PDT
Comment on attachment 145227 [details]
Patch

Yes. Darin also removed similar assert in http://trac.webkit.org/changeset/103779/trunk/Source/WebCore/css/CSSFontFaceSource.cpp.
Comment 3 WebKit Review Bot 2012-06-01 03:39:28 PDT
Comment on attachment 145227 [details]
Patch

Clearing flags on attachment: 145227

Committed r119207: <http://trac.webkit.org/changeset/119207>
Comment 4 WebKit Review Bot 2012-06-01 03:39:42 PDT
All reviewed patches have been landed.  Closing bug.